worked through 3.1 guided project

--- a/notes/3.1.1.html
+++ b/notes/3.1.1.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some info about Jamison Fox</title>
+    <link rel="stylesheet" href="3.1.3.css">
 </head>
 <body>
     <div id="nav">
@@ -15,17 +16,17 @@
     </div>
     <h1>Jamison Fox, World's Greatest WebDev...</h1>
     <div id="picture">
-        <img src="/resources/images/2022FoxFamily_101.jpg" alt="fox family walking in a grassy field" width="1800px">
+        <img src="/resources/images/2022FoxFamily_101.jpg" alt="fox family walking in a grassy field">
     </div>
     <div id="aboutme">
-        <h1>Some reasons that I'll be a great developer</h1>
+        <h2>Some reasons that I'll be a great developer</h2>
         <ol>
             <li>I'm kind of a robot</li>
             <li>I like to make stuff</li>
             <li>I love technology</li>
         </ol>
         <h2>Some things that I love</h2>
-        <ul>
+        <ul class="interests">
             <li>Off Roading. Check out <a href="https://www.trailsoffroad.com/" target="_blank">this website</a> for great trails near you.</li>
             <li>Technology. I love <a href="https://www.windowscentral.com/" target="_blank"> this blog</a> for latest Microsoft news.</li>
             <li>Caffeine. I drink <a href="https://www.monsterenergy.com/" target="_blank">Monsters</a> like they're about to be discontinued.</li>
