--- a/notes/3.1.1.html
+++ b/notes/3.1.1.html
@@ -1,44 +1,48 @@
 <!-- This is a quick page to practice HTML -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some info about Jamison Fox</title>
-    <link rel="stylesheet" href="3.1.3.css">
-</head>
-<body>
-    <div id="nav">
-        <a href="#picture">Picture</a>
-        <a href="#aboutme">About Me</a>
-        <a href="#contact">Contact</a>
-    </div>
-    <h1>Jamison Fox, World's Greatest WebDev...</h1>
-    <div id="picture">
-        <img src="/resources/images/2022FoxFamily_101.jpg" alt="fox family walking in a grassy field">
-    </div>
-    <div id="aboutme">
-        <h2>Some reasons that I'll be a great developer</h2>
-        <ol>
-            <li>I'm kind of a robot</li>
-            <li>I like to make stuff</li>
-            <li>I love technology</li>
-        </ol>
-        <h2>Some things that I love</h2>
-        <ul class="interests">
-            <li>Off Roading. Check out <a href="https://www.trailsoffroad.com/" target="_blank">this website</a> for great trails near you.</li>
-            <li>Technology. I love <a href="https://www.windowscentral.com/" target="_blank"> this blog</a> for latest Microsoft news.</li>
-            <li>Caffeine. I drink <a href="https://www.monsterenergy.com/" target="_blank">Monsters</a> like they're about to be discontinued.</li>
-        </ul>
-        <h2>I made this button</h2>
-        <button onclick="location.href='https://th.bing.com/th/id/OIP.lPHinwR413er3NJzeOEtQgHaHa?pid=ImgDet&rs=1';">Don't click this button</button>
-    </div>
-    <div id="contact">
-        <ul>
-            <li><a href="mailto:fox.jamison@outlook.com">fox.jamison@outlook.com</a></li>
-            <li><a href="tel:801-903-8637">801-903-8637</a></li>
-        </ul>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Info about Jamison Fox</title>
+        <link rel="stylesheet" href="3.1.3.css">
+    </head>
+    <body>
+        <header>
+            <div id="nav">
+                <a href="#picture">Picture</a>
+                <a href="#aboutme">About Me</a>
+                <a href="#contact">Contact</a>
+            </div>
+            <div>
+                <h1>Jamison Fox<br>World's Greatest WebDev...</h1>
+            </div>
+        </header>
+        <!-- <div id="picture">
+            <img src="/resources/images/2022FoxFamily_101.jpg" alt="fox family walking in a grassy field">
+        </div> -->
+        <section id="aboutme">
+            <h2>Some reasons that I'll be a great developer</h2>
+            <ol>
+                <li>I'm kind of a robot</li>
+                <li>I like to make stuff</li>
+                <li>I love technology</li>
+            </ol>
+            <h2>Some things that I love</h2>
+            <ul class="interests">
+                <li>Off Roading. Check out <a href="https://www.trailsoffroad.com/" target="_blank">this website</a> for great trails near you.</li>
+                <li>Technology. I love <a href="https://www.windowscentral.com/" target="_blank"> this blog</a> for latest Microsoft news.</li>
+                <li>Caffeine. I drink <a href="https://www.monsterenergy.com/" target="_blank">Monsters</a> like they're about to be discontinued.</li>
+            </ul>
+            <h2>I made this button</h2>
+            <button onclick="location.href='https://th.bing.com/th/id/OIP.lPHinwR413er3NJzeOEtQgHaHa?pid=ImgDet&rs=1';">Don't click this button</button>
+        </section>
+        <section id="contact">
+            <ul>
+                <li><a href="mailto:fox.jamison@outlook.com">fox.jamison@outlook.com</a></li>
+                <li><a href="tel:801-903-8637">801-903-8637</a></li>
+            </ul>
+        </section>
+    </body>
 </html>
