--- a/Projects/3.2-gp/3.2-gp.html
+++ b/Projects/3.2-gp/3.2-gp.html
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>3.2-gp</title>
-        <link rel="icon" href="/resources/images/Zenith Logo Circle Filled.png">
-        <link rel="stylesheet" href="/Projects/3.2-gp/3.2-gp.css">
+        <link rel="stylesheet" href="./3.2-gp.css">
     </head>
     <body>
         <header>
